...
    // MARK: Localization swift variable
    var home = Category.home.localized
    var work = Category.work.localized
    var personal = Category.personal.localized
    var hobbies = Category.hobbies.localized
    
//    var customCategory: [String] = ["Home", "Private", "Work", "Hobbies"]
    var body: some View {
        NavigationStack {
            VStack {
                if tasks.isEmpty {
                    Spacer()
                    Text("You doesn't have any ToDo yet...")
...
                                        Text("\(task.dueDate ?? Date.now, formatter: taskDateFormatter) @ \(task.dueDate ?? Date.now, formatter: taskTimeFormatter)")
                                            .font(.caption)
                                        Image(systemName: task.priority ?? "")
                                            .foregroundColor(Color("gold"))
                                            .fontWeight(.black)
                                            .font(.title3)
                                            .accessibilityLabel(Text("Priority"))
                                            .padding(.horizontal)
                                        
                                    }
                                }
                            }
                            .frame(minHeight: 80)
...
                                    // action dans le onTapGesture (conflit avec le navigation link)
                                } label: {
                                    Image(systemName: "trash")
                                        .foregroundColor(Color("gold"))
                                        .fontWeight(.black)
                                        .font(.title3)
                                        .accessibilityLabel(Text("Delete ToDo"))
                                }
                                .onTapGesture {
                                    taskVM.delete(task: task, vc: viewContext)
                                }
                                
                                Spacer()
...
                                taskPriorityDown = false
                                taskDueDateRecent = false
                            } label: {
                                if !taskDueDateOlder && !taskPriorityUp && !taskPriorityDown && !taskDueDateRecent {
                                    Text("✓ None")
                                } else {
                                    Text("None")
                                }
                            }
                            
                        } label: {
                            Image(systemName: "arrow.up.arrow.down")
                                .foregroundColor(Color("gold"))
...
                isAddTaskPresented.toggle()
            } label: {
                Image(systemName: "plus.circle")
                    .fontWeight(.heavy)
                    .font(.largeTitle)
                    .foregroundColor(Color("gold"))
                    .accessibility(identifier: "open Add ToDo")
            }
            .sheet(isPresented: $isAddTaskPresented) {
                AddTaskView()
            }
        }
    }
...
