...
                }
                //MARK: Edit btn
                Button {
                    taskVM.editTask(task: task, title: title, category: selectedCategory, priority: selectedPriority, date: date, content: content, taskColor: selectedCategory.taskColor.back, textColor: selectedCategory.taskColor.text, vc: viewContext)
                    dismiss()
                } label: {
                    Text("Edit")
                        .foregroundColor(Color("gold"))
                        .fontWeight(.heavy)
                        .font(.title3)
                        .frame(minWidth: 0, maxWidth: .infinity)
                }
            }
...
